# selfhostwatch

./: .gitignore  HACKING.md  README.md  index.html  k8s.yaml  pyproject.toml
app/: 13ft.html  20euros.html  243-game.html  299ko.html  2fauth.html  abantecart.html  acropolis.html  actual.html  adguardhome.html  adminer.html  adminerevo.html  adventurelog.html  aeneria.html  agendav.html  agewasm.html  agora.html  agorakit.html  airsonic.html  alltube.html  ampache.html  anarchism.html  antigen.html  appflowy.html  archivebox.html  archivist.html  armadietto.html  audiobookshelf.html  autobd.html  autobrr.html  automad.html  backdrop.html  backrest.html  baikal.html  bazarr.html  beehive.html  benevalibre.html  biboumi.html  bicbucstriim.html  bileto.html  bloat.html  (+660 more)
shw/: git.py  yuno.py
shw/dj/: asgi.py  export.py  manage.py  settings.py  urls.py  wsgi.py
shw/dj/git/: admin.py  apps.py  loader.py  models.py
shw/dj/git/migrations/: 0001_initial.py  0002_alter_version_version.py  0003_alter_gitapp_name.py  0004_alter_version_version.py  0005_gitapp_manual.py  0006_alter_gitapp_manual.py
shw/dj/updates/: apps.py  models.py  urls.py  views.py
shw/dj/updates/migrations/: 0001_initial.py  0002_initial.py
shw/dj/updates/templates/: base.html
shw/dj/updates/templates/updates/: app_list.html  update_list.html
shw/dj/yuno/: admin.py  apps.py  loader.py  models.py
shw/dj/yuno/migrations/: 0001_initial.py  0002_alter_appversion_yuno_high_quality_and_more.py  0003_appversion_repo.py  0004_alter_appversion_yuno_multi_instance.py
shw/yuno/: __init__.py
